Added codes for each feast and Sundays of Paschal cycle. Refactoring code to use those codes.

--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -570,6 +570,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="3Un-iM-GEB"/>
+        <segue reference="FYO-OP-ElQ"/>
     </inferredMetricsTieBreakers>
 </document>
