--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14C68k" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="G5G-CB-Hhd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C68k" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="G5G-CB-Hhd">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--Options-->
@@ -168,7 +168,7 @@
         <!--Title-->
         <scene sceneID="xiR-6X-NLn">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="W4B-va-jdc" customClass="Prayer" customModule="prayerbook" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Prayer" automaticallyAdjustsScrollViewInsets="NO" id="W4B-va-jdc" customClass="Prayer" customModule="prayerbook" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="j3E-wc-9mf"/>
                         <viewControllerLayoutGuide type="bottom" id="DOY-Dk-Zuv"/>
@@ -279,9 +279,6 @@
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dQq-7e-IE7" id="5sh-Yy-42E">
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </tableViewCellContentView>
-                                                <connections>
-                                                    <segue destination="W4B-va-jdc" kind="push" identifier="Prayer" id="3Un-iM-GEB"/>
-                                                </connections>
                                             </tableViewCell>
                                         </prototypes>
                                         <connections>
@@ -610,6 +607,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="3Un-iM-GEB"/>
+        <segue reference="xjH-sG-H2F"/>
     </inferredMetricsTieBreakers>
 </document>
