--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C68k" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="G5G-CB-Hhd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D113c" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="G5G-CB-Hhd">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
         <!--Options-->
@@ -163,7 +163,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iNJ-LS-15D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1376" y="-2355"/>
+            <point key="canvasLocation" x="1388" y="-3395"/>
         </scene>
         <!--Title-->
         <scene sceneID="xiR-6X-NLn">
@@ -225,6 +225,56 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eFb-6Z-RE5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2424" y="169"/>
+        </scene>
+        <!--Daily Tab-->
+        <scene sceneID="EKN-ka-Srl">
+            <objects>
+                <tableViewController id="dd2-at-RAg" customClass="DailyTab" customModule="prayerbook" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="tr5-jo-aHH">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextCell" rowHeight="44" id="0YA-pT-vYh" customClass="TextCell" customModule="prayerbook" customModuleProvider="target">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0YA-pT-vYh" id="wPF-qS-ZcU">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="GJZ-ki-hwh" customClass="RWLabel" customModule="prayerbook" customModuleProvider="target">
+                                            <rect key="frame" x="23" y="13" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="GJZ-ki-hwh" firstAttribute="leading" secondItem="wPF-qS-ZcU" secondAttribute="leading" constant="10" id="0fE-No-nBW"/>
+                                        <constraint firstAttribute="bottom" secondItem="GJZ-ki-hwh" secondAttribute="bottom" constant="5" id="mhZ-lm-sRi"/>
+                                        <constraint firstAttribute="trailing" secondItem="GJZ-ki-hwh" secondAttribute="trailing" constant="10" id="n4i-qr-cgq"/>
+                                        <constraint firstItem="GJZ-ki-hwh" firstAttribute="top" secondItem="wPF-qS-ZcU" secondAttribute="top" constant="5" id="uIb-2I-3Mc"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="title" destination="GJZ-ki-hwh" id="o1b-x3-umm"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="dd2-at-RAg" id="qWQ-PC-uEd"/>
+                            <outlet property="delegate" destination="dd2-at-RAg" id="zpk-xQ-7ce"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="GuI-xc-DYh">
+                        <barButtonItem key="leftBarButtonItem" image="calendar" style="plain" id="2hD-oK-lwZ">
+                            <connections>
+                                <segue destination="Avd-PZ-bJK" kind="modal" identifier="Calendar" id="Uu6-Xr-r03"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Cv-Aa-1IF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-468" y="-2219"/>
         </scene>
         <!--Daily Prayers-->
         <scene sceneID="edj-AU-hVs">
@@ -345,7 +395,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EQN-rs-m7O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-623" y="-2142"/>
+            <point key="canvasLocation" x="779" y="-2188"/>
         </scene>
         <!--Holy Communion-->
         <scene sceneID="fE8-SV-o0n">
@@ -565,18 +615,19 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="2oD-Mq-Jdq" kind="relationship" relationship="rootViewController" id="KLx-a7-7JL"/>
+                        <segue destination="dd2-at-RAg" kind="relationship" relationship="rootViewController" id="5go-1Z-fnl"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S4e-fy-YBX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1455" y="-2152"/>
+            <point key="canvasLocation" x="-1489" y="-2176"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="CjF-6s-WZz">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Avd-PZ-bJK" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="1pz-iV-Xt0"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="xLi-U3-3aS">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -588,7 +639,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9hn-mU-d22" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="396" y="-2355"/>
+            <point key="canvasLocation" x="412" y="-3397"/>
         </scene>
     </scenes>
     <resources>
@@ -607,6 +658,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="Uu6-Xr-r03"/>
         <segue reference="xjH-sG-H2F"/>
     </inferredMetricsTieBreakers>
 </document>
