--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D113c" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="G5G-CB-Hhd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D127a" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="G5G-CB-Hhd">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
@@ -240,22 +240,56 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0YA-pT-vYh" id="wPF-qS-ZcU">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="GJZ-ki-hwh" customClass="RWLabel" customModule="prayerbook" customModuleProvider="target">
-                                            <rect key="frame" x="23" y="13" width="42" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" placeholderIntrinsicWidth="748" placeholderIntrinsicHeight="33" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="748" translatesAutoresizingMaskIntoConstraints="NO" id="GJZ-ki-hwh" customClass="RWLabel" customModule="prayerbook" customModuleProvider="target">
+                                            <rect key="frame" x="10" y="5" width="748" height="33"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="GJZ-ki-hwh" firstAttribute="leading" secondItem="wPF-qS-ZcU" secondAttribute="leading" constant="10" id="0fE-No-nBW"/>
-                                        <constraint firstAttribute="bottom" secondItem="GJZ-ki-hwh" secondAttribute="bottom" constant="5" id="mhZ-lm-sRi"/>
-                                        <constraint firstAttribute="trailing" secondItem="GJZ-ki-hwh" secondAttribute="trailing" constant="10" id="n4i-qr-cgq"/>
-                                        <constraint firstItem="GJZ-ki-hwh" firstAttribute="top" secondItem="wPF-qS-ZcU" secondAttribute="top" constant="5" id="uIb-2I-3Mc"/>
+                                        <constraint firstItem="GJZ-ki-hwh" firstAttribute="leading" secondItem="wPF-qS-ZcU" secondAttribute="leading" priority="999" constant="10" id="0fE-No-nBW"/>
+                                        <constraint firstAttribute="bottom" secondItem="GJZ-ki-hwh" secondAttribute="bottom" priority="999" constant="5" id="mhZ-lm-sRi"/>
+                                        <constraint firstAttribute="trailing" secondItem="GJZ-ki-hwh" secondAttribute="trailing" priority="999" constant="10" id="n4i-qr-cgq"/>
+                                        <constraint firstItem="GJZ-ki-hwh" firstAttribute="top" secondItem="wPF-qS-ZcU" secondAttribute="top" priority="999" constant="5" id="uIb-2I-3Mc"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="title" destination="GJZ-ki-hwh" id="o1b-x3-umm"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ImageCell" rowHeight="44" id="I8y-c9-SkQ" customClass="ImageCell" customModule="prayerbook" customModuleProvider="target">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="I8y-c9-SkQ" id="mwe-w3-Yzf">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" placeholderIntrinsicWidth="702" placeholderIntrinsicHeight="21" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="702" translatesAutoresizingMaskIntoConstraints="NO" id="2ra-KW-o5s" customClass="RWLabel" customModule="prayerbook" customModuleProvider="target">
+                                            <rect key="frame" x="56" y="11" width="702" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lDm-jS-VQP">
+                                            <rect key="frame" x="10" y="5" width="36" height="36"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="36" id="FtU-nR-69d"/>
+                                                <constraint firstAttribute="width" constant="36" id="nwe-ms-0e7"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="2ra-KW-o5s" secondAttribute="trailing" priority="999" constant="10" id="01Q-cu-oMV"/>
+                                        <constraint firstItem="lDm-jS-VQP" firstAttribute="top" secondItem="mwe-w3-Yzf" secondAttribute="top" priority="999" constant="5" id="2Xf-zP-oZS"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="2ra-KW-o5s" secondAttribute="bottom" priority="999" constant="5" id="9XL-Nt-8HB"/>
+                                        <constraint firstItem="2ra-KW-o5s" firstAttribute="leading" secondItem="lDm-jS-VQP" secondAttribute="trailing" priority="999" constant="10" id="Pcs-tA-FX3"/>
+                                        <constraint firstItem="lDm-jS-VQP" firstAttribute="leading" secondItem="mwe-w3-Yzf" secondAttribute="leading" priority="999" constant="10" id="d2Q-Te-z5F"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lDm-jS-VQP" secondAttribute="bottom" priority="998" constant="5" id="ixk-WR-aRA"/>
+                                        <constraint firstAttribute="centerY" secondItem="2ra-KW-o5s" secondAttribute="centerY" priority="999" id="lY7-xT-oVI"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="icon" destination="lDm-jS-VQP" id="eIb-QG-i0l"/>
+                                    <outlet property="title" destination="2ra-KW-o5s" id="hPQ-mB-fs3"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -274,7 +308,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Cv-Aa-1IF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-468" y="-2219"/>
+            <point key="canvasLocation" x="-468" y="-2224"/>
         </scene>
         <!--Daily Prayers-->
         <scene sceneID="edj-AU-hVs">
