--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -292,6 +292,40 @@
                                     <outlet property="title" destination="2ra-KW-o5s" id="hPQ-mB-fs3"/>
                                 </connections>
                             </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextDetailsCell" rowHeight="55" id="eHJ-aw-Fnu" customClass="TextDetailsCell" customModule="prayerbook" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eHJ-aw-Fnu" id="8DW-CC-4mE">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" text="Subtitle" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="748" translatesAutoresizingMaskIntoConstraints="NO" id="HR8-Py-FPC" customClass="RWLabel" customModule="prayerbook" customModuleProvider="target">
+                                            <rect key="frame" x="10" y="29" width="748" height="20"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="748" translatesAutoresizingMaskIntoConstraints="NO" id="RZ6-2a-aKm" customClass="RWLabel" customModule="prayerbook" customModuleProvider="target">
+                                            <rect key="frame" x="10" y="5" width="748" height="24"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="RZ6-2a-aKm" firstAttribute="top" secondItem="8DW-CC-4mE" secondAttribute="top" priority="999" constant="5" id="2p2-Kl-kMo"/>
+                                        <constraint firstAttribute="bottom" secondItem="HR8-Py-FPC" secondAttribute="bottom" priority="999" constant="5" id="61z-5X-Fh0"/>
+                                        <constraint firstAttribute="trailing" secondItem="HR8-Py-FPC" secondAttribute="trailing" priority="999" constant="10" id="Iio-d1-Gph"/>
+                                        <constraint firstItem="RZ6-2a-aKm" firstAttribute="leading" secondItem="8DW-CC-4mE" secondAttribute="leading" priority="999" constant="10" id="PDy-zp-ifI"/>
+                                        <constraint firstAttribute="trailing" secondItem="RZ6-2a-aKm" secondAttribute="trailing" priority="999" constant="10" id="aBV-xP-bo6"/>
+                                        <constraint firstItem="HR8-Py-FPC" firstAttribute="top" secondItem="RZ6-2a-aKm" secondAttribute="bottom" priority="999" id="aW2-SO-UQY"/>
+                                        <constraint firstItem="HR8-Py-FPC" firstAttribute="leading" secondItem="8DW-CC-4mE" secondAttribute="leading" priority="999" constant="10" id="thH-1z-Zt6"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="subtitle" destination="HR8-Py-FPC" id="1Xx-cO-FCw"/>
+                                    <outlet property="title" destination="RZ6-2a-aKm" id="ih8-hn-khC"/>
+                                </connections>
+                            </tableViewCell>
                         </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="dd2-at-RAg" id="qWQ-PC-uEd"/>
